--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /public/build
 /public/hot
 /public/storage
+/public/assets
+/public/dist
+/public/plugins
+/public/images
 /storage/*.key
 /vendor
 .env
